[tool.poetry]
name = "resource-monitoring"
version = "0.0.8"
description = "A simple resource monitoring tool, that can be used to test availability of HTCondor resources."
authors = ["Sebastian Brommer <brommer.sebastian@gmail.com>"]
license = "{file = \"LICENSE\"}"
readme = "README.md"
packages = [{include = "resource_monitoring"}]

[tool.poetry.dependencies]
python = ">=3.8"
htcondor = "^23.4.0"
PyYAML = "^6.0.1"
schedule = "^1.2.1"
influxdb-client = "^1.40.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
